# api_looter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py  validate_apis.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  security.yml  validate-pr.yml
app/: __init__.py  api.py  api_handlers.py  api_helpers.py  data.py  forms.py  models.py  reset_db.py  routes.py  seed.py
app/static/: style.css
app/templates/: api_detail.html  index.html  layout.html
docs/: README.md
docs/ci-cd/: PULL_REQUEST_TEMPLATE.md  WORKFLOWS.md
docs/ci-cd/ISSUE_TEMPLATE/: add_api.md  bug_report.md
docs/contributing/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
docs/security/: SECURITY.md
docs/setup/: DEVELOPMENT.md  ENVIRONMENTS.md  PRODUCTION.md
migrations/versions/: 3c3561ca9eff_initial_migration.py  78ed842c38ba_add_api_key_to_apimodel.py
