[project]
name = "api_looter"
version = "0.1.0"
description = "A curated directory and tester for public APIs."
authors = [
    { name = "Computer Anything LLC", email = "cpt.anything@gmail.com" }
]
requires-python = ">=3.8"

[tool.ruff]
line-length = 100
ignore = ["E501"]  # Ignore line length warnings
select = ["E", "F", "W", "C90"]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "venv",
    "env",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
skip = ["migrations", "venv", "env"]

[tool.ruff.per-file-ignores]
"app/seed.py" = ["E501", "F401", "F841", "F811", "F405"]
