[project]
name = "api_looter"
version = "0.1.0"
description = "A curated directory and tester for public APIs."
authors = [
    { name = "Computer Anything LLC", email = "cpt.anything@gmail.com" }
]
requires-python = ">=3.8"

[tool.ruff]
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "venv",
    "env",
]

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "W", "C90"]

[tool.ruff.lint.per-file-ignores]
"app/seed.py" = ["E501", "F401", "F841", "F811", "F405"]
